# wolf3d-path-traced

./: .gitignore  CMakeLists.txt  README.md
.github/: DATA-FULL.txt  PLAY.txt
.github/workflows/: build.yml
docs/: ARCHITECTURE.md
shaders/: pathtrace.comp  post.comp
src/: id_in.cpp  id_in.h  id_sd.cpp  id_vl.cpp  id_vl.h  version.h  wl_def.h  wl_draw.cpp  wl_game.cpp  wl_main.cpp  wl_menu.cpp  wl_play.cpp
src/compare/: compare_renderer.cpp  compare_renderer.h  screenshot_tools.cpp
src/platform/: autopilot.cpp  autopilot.h  mixer_compat.h  platform.h  platform_audio.cpp  platform_files.cpp  platform_sdl.cpp  sdl_compat.h
src/rt/: render_api.h  rt_lights.cpp  rt_lights.h  rt_materials.cpp  rt_materials.h  rt_pathtrace.cpp  rt_pathtrace.h  rt_renderer.cpp  rt_scene.h  rt_scene_extract.cpp  rt_vulkan.cpp  rt_vulkan.h
